tests/ui/include_value_wrong_size.nightly.stderr
error[E0463]: can't find crate for `zerocopy`
  --> $DIR/include_value_wrong_size.rs:12:25
   |
12 | const WRONG_SIZE: u64 = zerocopy::include_value!("../../testdata/include_value/data");
   |                         ^^^^^^^^ can't find crate

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0463`.
